feat: add data network details page
